--- a/Vinos/Resources/layout/login.axml
+++ b/Vinos/Resources/layout/login.axml
@@ -82,6 +82,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:id="@+id/checkBox1"
+                    android:checked="true"
                     android:layout_marginLeft="35px"
                     android:layout_marginTop="10px"
                     android:layout_marginRight="35px"
