--- a/Vinos/Resources/layout/vinosConfirmation.axml
+++ b/Vinos/Resources/layout/vinosConfirmation.axml
@@ -3,13 +3,27 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
-    <ListView
-        android:id="@+id/ListOrder"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_gravity="start"
-        android:choiceMode="singleChoice"
-        android:divider="#818181"
-        android:dividerHeight="1dp"
-        android:background="#E3F2FD" />
+    <ScrollView
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
+            <ListView
+                android:id="@+id/ListOrder"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_gravity="start"
+                android:choiceMode="singleChoice"
+                android:divider="#818181"
+                android:dividerHeight="1dp"
+                android:background="#E3F2FD" />
+            <Button
+                android:text="Ordenar"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/confirm" />
+        </LinearLayout>
+    </ScrollView>
 </LinearLayout>
